# construct3

./: AUTHORS  BUGS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.MACOSX  README.SUSE  README.md  THANKS  TODO  aclocal.m4  config.h.in  configure  configure.in  mkinstalldirs  reconf
doc/: Makefile.am  Makefile.in  construct.1
m4/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in
src/cs_lib/: GetOpts.tcl  Makefile.am  Makefile.in  balloon_help.tcl  bi_match.tcl  callbacks.tcl  circles.tcl  cs_dp  cs_fold  cs_proj.tcl  cs_proj_conv  cs_remgaponly_cols  cs_shift  cs_struct_displ  csdpbatch  csfoldbatch  generic_utils.tcl  gui.tcl  initcore.tcl  logogui_ns.tcl  minialn.tcl  mkIndex.tcl  p.tcl  pattern.tcl  rnamlout.tcl  struct.tcl  struct_aln.tcl  sub_gui.tcl  upe.tcl  utils.tcl
src/cs_wish/: Makefile.am  Makefile.in  bmatch.c  bmatch.h  bp_prob_mat.c  bp_prob_mat.h  callbacks.c  callbacks.h  consensus.c  consensus.h  cs_bmatch.c  cs_bmatch.h  cs_dpm.c  cs_dpm.h  cs_imatch.c  cs_imatch.h  cs_seqio.c  cs_seqio.h  dlist.c  dlist.h  generic_utils.c  generic_utils.h  gui.c  gui.h  if.c  if.h  imatch.c  imatch.h  main.c  main.h  main.h.in  mic.c  mic.h  move_update.c  move_update.h  mwmatch.c  mwmatch.h  mx.c  mx.h  opt_struct.c  (+20 more)
src/drawstruct/: CS_DrawStruct.c  CS_DrawStruct.h  Makefile.am  Makefile.in  TkCS_DrawStruct.c  TkCS_DrawStruct.h  draw_test.tcl  drawstruct.h  drawstruct.tcl  generic_utils.c  generic_utils.h  mkIndex.tcl
src/pixmaps/: Makefile.am  Makefile.in
src/tinoco/: Makefile.am  Makefile.in  cs_add_ti_dp  tinoco.c  tinoco.h
