# Copyright (C) 2001-2004 Institute of Physical Biology,
#                    Heinrich-Heine Universität Düsseldorf, Germany
#                    <construct@biophys.uni-duesseldorf.de>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.


# CVS $Id: Makefile.am,v 1.6 2005-10-20 11:43:53 wilm Exp $


# Install m4 macros in this directory
m4datadir = $(datadir)/aclocal

# List your m4 macros here
#m4macros = AC_CHECK_VERSION
m4macros = 

# The following is boilerplate
#m4data_DATA = tcl.m4 misc.m4
m4data_DATA =
EXTRA_DIST = $(m4data_DATA) 

