# Copyright (C) 2001-2004 Institute of Physical Biology,
#                    Heinrich-Heine Universität Düsseldorf, Germany
#                    <construct@biophys.uni-duesseldorf.de>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

# CVS $Id: Makefile.am,v 1.4 2004-05-25 13:29:24 wilm Exp $

PIXMAPS_FILES = cs_icon_48x48.gif \
                cs_icon_48x48.png


EXTRA_DIST = $(PIXMAPS_FILES)

pixmapsdir = ${datadir}/pixmaps/@PACKAGE@
pixmaps_DATA =  $(PIXMAPS_FILES)
